external-crates/move/crates/move-compiler/tests/move_check/parser/expr_unary_negation.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04016]: too few arguments
  ┌─ tests/move_check/parser/expr_unary_negation.move:5:5
  │
5 │     assert!(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │     ^^^^^^^^^^^^^^^^^
  │     │      │
  │     │      Found 0 argument(s) here
  │     Invalid call of 'assert'. The call expected 2 argument(s) but got 0

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/expr_unary_negation.move:5:19
  │
5 │     assert!(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │                   ^
  │                   │
  │                   Unexpected '-'
  │                   Expected an expression term

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/expr_unary_negation.move:5:23
  │
5 │     assert!(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │     ----------------- ^^ - Found: integer. It is not compatible with the other type.
  │     │                 │   
  │     │                 Incompatible arguments to '=='
  │     Found: '()'. It is not compatible with the other type.

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/expr_unary_negation.move:5:27
  │
5 │     assert!(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │                           ^
  │                           │
  │                           Unexpected ')'
  │                           Expected ';'
